--- a/app/swagger.gradle
+++ b/app/swagger.gradle
@@ -6,38 +6,26 @@ configurations { generate }
 
 ext {
 	swagger_annotations_version = "1.5.0"
-	jackson_version = "2.4.2"
-	jersey_version = "1.18"
-	jodatime_version = "2.3"
+	gson_version = "2.6.1"
+	httpclient_version = "4.3.+"
 	junit_version = "4.8.1"
 
 	supporting_files = [
-		"ApiClient.java",
-		"ApiException.java",
-		"Configuration.java",
-		"Pair.java",
-		"StringUtil.java",
-		"ApiKeyAuth.java",
-		"Authentication.java",
-		"HttpBasicAuth.java",
-		"OAuth.java",
-		"OAuthFlow.java"
+			"ApiException.java",
+			"ApiInvoker.java",
+			"HttpPatch.java",
+			"JsonUtil.java",
+			"Pair.java"
 	].join(",")
 }
 
 dependencies {
 	compile "io.swagger:swagger-annotations:$swagger_annotations_version"
-	compile "com.sun.jersey:jersey-client:$jersey_version"
-	compile "com.sun.jersey.contribs:jersey-multipart:$jersey_version"
-	compile "com.fasterxml.jackson.core:jackson-core:$jackson_version"
-	compile "com.fasterxml.jackson.core:jackson-annotations:$jackson_version"
-	compile "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
-	compile "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:$jackson_version"
-	compile "com.brsanthu:migbase64:2.2"
-	compile "com.fasterxml.jackson.datatype:jackson-datatype-joda:2.1.5"
-	compile "joda-time:joda-time:$jodatime_version"
-	compile "com.michaelpardo:activeandroid:3.1.0-SNAPSHOT"
-	compile "javax.annotation:javax.annotation-api:1.2"
+	compile "com.google.code.gson:gson:$gson_version"
+	compile "io.swagger:swagger-annotations:$swagger_annotations_version"
+	compile "org.apache.httpcomponents:httpcore:$httpclient_version"
+	compile "org.apache.httpcomponents:httpclient:$httpclient_version"
+	compile "org.apache.httpcomponents:httpmime:$httpclient_version"
 
 	testCompile "junit:junit:$junit_version"
 
@@ -52,7 +40,7 @@ task generateSwagger(type: JavaExec) {
 
 	// Skip the build-related files
 	jvmArgs = ["-Dmodels", "-Dapis", "-DsupportingFiles=$supporting_files"]// Configure for the API specification
-	args = ["generate", "-i", "$schema_location", "-l", "java", "-o", ".", "-DserializableModel=true"]
+	args = ["generate", "-i", "$schema_location", "-l", "android", "-o", "."]
 }
 
 task cleanGenerateSwagger(type: Delete) { delete "src/main/java/io/swagger/client" }
