Added placeholder event

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,14 +41,14 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    // Enable card views
+
+
+    provided 'org.roboguice:roboblender:3.+'
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:design:23.2.0'
     compile 'com.android.support:support-v4:23.2.0'
-    // Enable card views
-    compile 'com.android.support:cardview-v7:21.0.+'
-    compile 'com.android.support:recyclerview-v7:21.0.+'
-
-    // Robo jews
+    compile 'com.android.support:cardview-v7:23.2.0'
+    compile 'com.android.support:recyclerview-v7:23.2.0'
     compile 'org.roboguice:roboguice:3.+'
-    provided 'org.roboguice:roboblender:3.+'
 }
