Setup Roboguice initialization
Kotlin now configured for Roboguice, module was added and launcher derived from the Roboguice implementation. The argument to the card is now passed in the bundle, since the update layout method tried to invoke functionality that was not initialzied yet.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <meta-data
+                android:name="roboguice.modules"
+                android:value="org.eurofurence.connavigator.ConnavigatorModule"/>
+        <meta-data
+                android:name="roboguice.annotations.packages"
+                android:value="roboguice,org.eurofurence.connavigator"/>
     </application>
-
 </manifest>
