Patch Swagger generator
The code generator does not utilize the feature for inheritance. A new version is compiled from the current head of the git repositories master branch. Now, erroneous reconfiguration of Gson is not required. No fields are duplicated. Adjustments to the build script and the gradle configuration to speed up launch were added.

--- a/app/swagger.gradle
+++ b/app/swagger.gradle
@@ -30,7 +30,7 @@ dependencies {
 	testCompile "junit:junit:$junit_version"
 
 	// Dependency for the code generator only
-	generate "io.swagger:swagger-codegen-cli:2.1.5"
+	generate files("tools/swagger-codegen-cli.jar")
 }
 
 task generateSwagger(type: JavaExec) {
