--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,9 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 23
     buildToolsVersion '23.0.2'
+	
     useLibrary 'org.apache.http.legacy'
+	
     defaultConfig {
         applicationId "org.eurofurence.connavigator"
         minSdkVersion 16
@@ -12,18 +14,25 @@ android {
         versionCode 1
         versionName "1.0"
     }
+	
+	lintOptions {
+		abortOnError false
+	}
+	
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+	
     packagingOptions {
         exclude "META-INF/DEPENDENCIES"
         exclude "META-INF/LICENSE"
         exclude "META-INF/MANIFEST.MF"
         exclude "META-INF/NOTICE"
     }
+	
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
