--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,4 @@
 # org.gradle.parallel=true
 org.gradle.daemon=true
 org.gradle.parallel=true
-org.gradle.jvmargs=-Xmx12G
+org.gradle.jvmargs=-Xmx12G -XX:MaxPermSize=2G -XX:+HeapDumpOnOutOfMemoryError
