--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="org.eurofurence.connavigator">
+
     <uses-permission android:name="android.permission.INTERNET"/>
+
+    <!-- Main entry point of the application -->
     <application
             android:name=".ConnavigatorApplication"
             android:allowBackup="true"
@@ -10,6 +13,12 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
 
+        <!-- Service providing a detached retrieval of data from the internet. -->
+        <service
+                android:name=".QueryService"
+                android:exported="false"/>
+
+        <!-- Main screen within the application -->
         <activity
                 android:name=".LaunchScreenActivity"
                 android:label="@string/app_name"
@@ -20,6 +29,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <meta-data
                 android:name="roboguice.modules"
                 android:value="org.eurofurence.connavigator.ConnavigatorModule"/>
