Migrate to AUIL
Since Volley does only the basics of image caching, Android Universal Image Loader was introduced. Now, the images are cached between application runs, tested with airplane mode.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,8 @@ dependencies {
     compile "org.apache.httpcomponents:httpclient:$httpclient_version"
     compile "org.apache.httpcomponents:httpmime:$httpclient_version"
     compile "com.mcxiaoke.volley:library-aar:$volley_version"
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+
 
     testCompile "junit:junit:$junit_version"
 }
