Implement info and groups
As per requirement, info is categorized in groups. These are displayed and on clicking them, open up the associated info.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,9 +29,22 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.EventActivity"
-                  android:theme="@style/AppTheme.NoActionBar"
-                  android:label="Event View">
+
+        <activity
+                android:name=".ui.InfoActivity"
+                android:theme="@style/AppTheme.NoActionBar"
+                android:label="Info View">
+        </activity>
+        <activity
+                android:name=".ui.InfoListActivity"
+                android:theme="@style/AppTheme.NoActionBar"
+                android:label="Infos View">
+        </activity>
+
+        <activity
+                android:name=".ui.EventActivity"
+                android:theme="@style/AppTheme.NoActionBar"
+                android:label="Event View">
         </activity>
     </application>
 </manifest>
