--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,7 @@ dependencies {
     compile "com.mcxiaoke.volley:library-aar:$volley_version"
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
+    compile 'us.feras.mdv:markdownview:1.1.0'
 
     testCompile "junit:junit:$junit_version"
 }
