--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,6 +102,9 @@ dependencies {
     // GCM
     compile "com.google.android.gms:play-services-gcm:8.3.0"
 
+    // Analytics
+    compile 'com.google.android.gms:play-services-analytics:8.3.0'
+
 
     compile 'us.feras.mdv:markdownview:1.1.0'
 
