--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
     <!-- Main entry point of the application -->
     <application
-            android:name=".app.ConnavigatorApplication"
+            android:name=".app.ConNavigatorApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
