--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,9 @@ dependencies {
     // Analytics
     compile 'com.google.android.gms:play-services-analytics:8.3.0'
 
+    // Maps
+    compile 'com.google.android.gms:play-services-maps:8.3.0'
+
 
     compile 'us.feras.mdv:markdownview:1.1.0'
 
