--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="org.eurofurence.connavigator">
 
+
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
@@ -14,12 +15,15 @@
 
     <!-- Main entry point of the application -->
     <application
-            android:name=".app.ConNavigatorApplication"
+            android:name=".app.ConnavigatorApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <!-- API key -->
+        <meta-data android:name="com.google.android.geo.API_KEY"
+                   android:value="AIzaSyCoy8lY9f4cWx2fvS1HMBJaNHCkFWxm8DY"/>
 
         <!-- Service providing a detached retrieval of data from the internet. -->
         <service
@@ -59,6 +63,6 @@
                 <action android:name="com.google.gms.iid.InstanceID"/>
             </intent-filter>
         </service>
-        <service android:name=".gcm.RegistrationIntentService" android:exported="false" />
+        <service android:name=".gcm.RegistrationIntentService" android:exported="false"/>
     </application>
 </manifest>
