Added preferences for analytics tracking

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".ui.ActivitySettings"/>
+
         <!-- GCM Services -->
         <receiver
                 android:name="com.google.android.gms.gcm.GcmReceiver"
