Set up a start screen to have users wait while the application loads some data. Will alter be implemented to have a quick tutorial and stuff

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
         <!-- Root screen of the app, will contain the different panels as fragments -->
         <activity android:name=".ui.ActivityStart"
                   android:label="Eurofurence"
-                  android:theme="@style/AppTheme.NoActionBar">
+                  android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
