--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "org.eurofurence.connavigator"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 2
-        versionName "1.0a"
+        versionCode 3
+        versionName "1.1"
         multiDexEnabled true
     }
 
