--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,14 +36,15 @@
         <!-- Root screen of the app, will contain the different panels as fragments -->
         <activity android:name=".ui.ActivityStart"
                   android:label="Eurofurence"
-                  android:theme="@style/AppTheme">
+                  android:theme="@style/AppTheme"
+                  android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.ActivityRoot" />
+        <activity android:name=".ui.ActivityRoot"/>
 
         <activity android:name=".ui.ActivitySettings"/>
 
