--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "org.eurofurence.connavigator"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 4
-        versionName "1.1a"
+        versionCode 5
+        versionName "1.2"
         multiDexEnabled true
     }
 
