--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,16 +28,10 @@
         <meta-data android:name="com.google.android.geo.API_KEY"
                    android:value="AIzaSyCoy8lY9f4cWx2fvS1HMBJaNHCkFWxm8DY"/>
 
-        <!-- Service providing a detached retrieval of data from the internet. -->
-        <service
-                android:name=".database.UpdateIntentService"
-                android:exported="false"/>
-
         <!-- Root screen of the app, will contain the different panels as fragments -->
         <activity android:name=".ui.ActivityStart"
                   android:label="Eurofurence"
-                  android:theme="@style/AppTheme"
-                  android:noHistory="true">
+                  android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -47,6 +41,11 @@
         <activity android:name=".ui.ActivityRoot"/>
 
         <activity android:name=".ui.ActivitySettings"/>
+
+        <!-- Service providing a detached retrieval of data from the internet. -->
+        <service
+                android:name=".database.UpdateIntentService"
+                android:exported="false"/>
 
         <!-- GCM Services -->
         <receiver
