Added a build option to disable rotation in the app

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,8 @@ android {
         versionCode 20
         versionName "1.8.7"
         multiDexEnabled true
+
+        buildConfigField("boolean", "NO_ROTATION", "true")
     }
 
     lintOptions {
