Upgraded GCM to FCM

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,17 +6,6 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
-    <!-- Map stuff -->
-    <!--<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>-->
-
-
-    <!-- Notifications -->
-    <permission
-            android:name="org.eurofurence.permission.C2D_MESSAGE"
-            android:protectionLevel="signature"/>
-    <uses-permission android:name="org.eurofurence.connavigator.permission.C2D_MESSAGE"/>
-
-
     <!-- Main entry point of the application -->
     <application
             android:name=".app.ConnavigatorApplication"
@@ -67,17 +56,6 @@
                 android:name=".database.UpdateIntentService"
                 android:exported="false"/>
 
-        <!-- GCM Services -->
-        <receiver
-                android:name="com.google.android.gms.gcm.GcmReceiver"
-                android:exported="true"
-                android:permission="com.google.android.c2dm.permission.SEND">
-            <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
-                <category android:name="org.eurofurence.connavigator.gcm"/>
-            </intent-filter>
-        </receiver>
-
         <!-- Analytics -->
         <receiver android:name="com.google.android.gms.analytics.AnalyticsReceiver"
                   android:enabled="true">
@@ -96,14 +74,7 @@
                 android:name=".gcm.MyGCMListenerService"
                 android:exported="false">
             <intent-filter>
-                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
-            </intent-filter>
-        </service>
-        <service
-                android:name=".gcm.MyInstanceIDListenerService"
-                android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.gms.iid.InstanceID"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
         <service
