--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
-apply plugin: 'idea'
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
+apply plugin: "idea"
+apply plugin: "com.android.application"
+apply plugin: "kotlin-android"
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '23.0.2'
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "org.eurofurence.connavigator"
@@ -24,11 +24,11 @@ android {
     buildTypes {
         debug {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
 
@@ -52,8 +52,8 @@ android {
     }
 
     sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
-        androidTest.java.srcDirs += 'src/androidTest/kotlin'
+        main.java.srcDirs += "src/main/kotlin"
+        androidTest.java.srcDirs += "src/androidTest/kotlin"
     }
     productFlavors {
         // Define separate dev and prod product flavors.
@@ -84,53 +84,58 @@ ext {
     volley_version = "1.0.1"
     junit_version = "4.8.1"
     android_support_version = "23.2.1"
+    google_play_version = "9.0.2"
 }
 
 // Embedded swagger
-apply from: 'swagger.gradle'
+apply from: "swagger.gradle"
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
+    compile fileTree(include: ["*.jar"], dir: "libs")
+    testCompile "junit:junit:4.12"
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:design:23.2.1'
-    compile 'com.android.support:support-v4:23.2.1'
-    compile 'com.google.guava:guava:19.0'
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:design:23.2.1'
-    compile 'com.android.support:support-v4:23.2.1'
-    compile 'com.android.support:cardview-v7:23.2.1'
-    compile 'com.android.support:recyclerview-v7:23.2.1'
-    compile 'com.android.support:cardview-v7:23.2.1'
-    compile 'com.android.support:recyclerview-v7:23.2.1'
-    compile 'com.android.support:multidex:1.0.1'
-    compile 'net.danlew:android.joda:2.9.2'
-    compile 'joda-time:joda-time:2.9.2:no-tzdb'
+    compile "com.android.support:appcompat-v7:$android_support_version"
+    compile "com.android.support:design:$android_support_version"
+    compile "com.android.support:support-v4:$android_support_version"
+    compile "com.google.guava:guava:19.0"
+    compile "com.android.support:appcompat-v7:$android_support_version"
+    compile "com.android.support:design:$android_support_version"
+    compile "com.android.support:support-v4:$android_support_version"
+    compile "com.android.support:cardview-v7:$android_support_version"
+    compile "com.android.support:recyclerview-v7:$android_support_version"
+    compile "com.android.support:cardview-v7:$android_support_version"
+    compile "com.android.support:recyclerview-v7:$android_support_version"
+    compile "com.android.support:multidex:1.0.1"
+    compile "net.danlew:android.joda:2.9.2"
+    compile "joda-time:joda-time:2.9.2:no-tzdb"
     compile "io.swagger:swagger-annotations:$swagger_annotations_version"
     compile "com.google.code.gson:gson:$gson_version"
     compile "org.apache.httpcomponents:httpcore:$httpclient_version"
     compile "org.apache.httpcomponents:httpclient:$httpclient_version"
     compile "org.apache.httpcomponents:httpmime:$httpclient_version"
     compile "com.mcxiaoke.volley:library-aar:$volley_version"
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    compile "com.nostra13.universalimageloader:universal-image-loader:1.9.5"
 
-    // GCM
-    compile "com.google.android.gms:play-services-gcm:9.0.2"
+    // Firebase
+    compile "com.google.firebase:firebase-core:$google_play_version"
+    compile "com.google.firebase:firebase-messaging:$google_play_version"
+    compile "com.google.firebase:firebase-config:$google_play_version"
 
     // Analytics
-    compile 'com.google.android.gms:play-services-analytics:9.0.2'
+    compile "com.google.android.gms:play-services-analytics:$google_play_version"
 
     // Maps
-    compile 'com.google.android.gms:play-services-maps:9.0.2'
+    compile "com.google.android.gms:play-services-maps:$google_play_version"
 
     // Photoview
-    compile 'com.github.chrisbanes:PhotoView:1.2.6'
+    compile "com.github.chrisbanes:PhotoView:1.2.6"
 
-    compile 'us.feras.mdv:markdownview:1.1.0'
+    compile "us.feras.mdv:markdownview:1.1.0"
 
     testCompile "junit:junit:$junit_version"
 }
+
+apply plugin: "com.google.gms.google-services"
