Increased Dex heap size to 4G. Builds are now fast as heck

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,10 @@ android {
         multiDexEnabled true
     }
 
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+
     lintOptions {
         abortOnError false
     }
