--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ apply plugin: "com.android.application"
 apply plugin: "kotlin-android"
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 32
         versionName "1.9.10"
         multiDexEnabled true
@@ -69,6 +69,7 @@ android {
         prod {
             // The actual minSdkVersion for the application.
             minSdkVersion 14
+            applicationId "org.eurofurence.connavigator"
         }
     }
 }
@@ -85,8 +86,8 @@ ext {
     httpclient_version = "4.3.3"
     volley_version = "1.0.1"
     junit_version = "4.8.1"
-    android_support_version = "24.2.1"
-    google_play_version = "9.2.1"
+    android_support_version = "25.3.1"
+    google_play_version = "10.2.1"
 }
 
 // Embedded swagger
