refactor(favorites): refactor event favorites to broadcast
Event favoriting now happens via a broadcast that changes data. A lot simpler

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,8 @@
         <!-- Pending intents -->
         <receiver android:name=".gcm.NotificationPublisher"/>
 
+        <receiver android:name=".broadcast.EventFavoriteBroadcast" />
+
         <service
                 android:name=".gcm.MyGCMListenerService"
                 android:exported="false">
