--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,8 +77,7 @@ android {
 
 ext {
     // Location of the schema file
-    backend_commit = "c72de67fe4dded4f8acf2e67f9e286245d3ebd1e"
-    schema_location = "https://raw.githubusercontent.com/eurofurence/ef-app_backend/$backend_commit/Swagger/ApiDefinition.yml"
+    schema_location = "https://app.eurofurence.org/swagger/v2/swagger.json"
 
     // Dependency versions
     swagger_annotations_version = "1.5.0"
