feat(notification): refactor push notifications to work for new unified system
The push service now works for the new system, specifiying a type and sending out notifications if
it has to. the Notification factory has also been rebuilt to accomodate for modular batch
notification building

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,7 +71,7 @@
         <receiver android:name=".broadcast.EventFavoriteBroadcast" />
 
         <service
-                android:name=".gcm.MyGCMListenerService"
+                android:name=".gcm.PushListenerService"
                 android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
