--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,6 +143,9 @@ dependencies {
     // Kandroid for easier components
     compile 'com.pawegio.kandroid:kandroid:0.7.0@aar'
 
+    //  Circular progress that don't make me consider suicide
+    compile 'com.github.lzyzsd:circleprogress:1.2.1'
+
     testCompile "junit:junit:$junit_version"
 }
 
