feat(preferences): move preferences to kotPref file

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -153,6 +153,11 @@ dependencies {
     //  Circular progress that don't make me consider suicide
     compile 'com.github.lzyzsd:circleprogress:1.2.1'
 
+    // Preferences
+
+    compile "com.chibatching.kotpref:kotpref:2.1.1"
+    compile "com.chibatching.kotpref:enum-support:2.1.1"
+
     testCompile "junit:junit:$junit_version"
 }
 
