--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,6 +143,11 @@ dependencies {
     // Kandroid for easier components
     compile 'com.pawegio.kandroid:kandroid:0.7.0@aar'
 
+    // Preferences
+
+    compile "com.chibatching.kotpref:kotpref:2.1.1"
+    compile "com.chibatching.kotpref:enum-support:2.1.1"
+
     testCompile "junit:junit:$junit_version"
 }
 
